<resources>
    <string name="app_name">Currency Converter</string>

    <string name="base_currency_txt">Базовая валюта</string>
    <string name="nominal_currency_txt">Остальные валюты</string>
    <string name="non_currency_txt">Невошедшие</string>
    <string name="use_currency_txt">использовать вабранные валюты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="network_msg">Отсутвует подключение к сети. Включить wi-fi ?</string>
    <string name="network_msg_title">Связь с удаленным сервером</string>
    <string name="exit_msg">Вы хотите выйти из приложения ?</string>
    <string name="exit">Выход</string>


    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_point">.</string>
</resources>
