<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

    <TableLayout
            android:id="@+id/keyboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:divider="@drawable/keyboard_divider"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TableRow style="@style/keyboard_row">

            <TextView
                    android:id="@+id/t9_key_1"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_one"/>

            <TextView
                    android:id="@+id/t9_key_2"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_two"/>

            <TextView
                    android:id="@+id/t9_key_3"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_three"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                    android:id="@+id/t9_key_4"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_four"/>

            <TextView
                    android:id="@+id/t9_key_5"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_five"/>

            <TextView
                    android:id="@+id/t9_key_6"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_six"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                    android:id="@+id/t9_key_7"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_seven"/>

            <TextView
                    android:id="@+id/t9_key_8"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_eight"/>

            <TextView
                    android:id="@+id/t9_key_9"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_nine"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                    android:id="@+id/t9_key_point"
                    style="@style/keyboard_number_button"
                    android:text="@string/btn_point"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/t9_key_0"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_zero"/>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/t9_key_backspace"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_backspace_black"/>
        </TableRow>
        <TableRow style="@style/keyboard_row">
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/t9_key_clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_close_black"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>