<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/t9_key_1"
            style="@style/keyboard_number_button"
            android:text="@string/number_one"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintBottom_toTopOf="@+id/btn_first_row_area"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/t9_key_2"
            style="@style/keyboard_number_button"
            android:text="@string/number_two"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintBottom_toTopOf="@+id/btn_first_row_area"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/t9_key_3"
            style="@style/keyboard_number_button"
            android:text="@string/number_three"
            app:layout_constraintEnd_toEndOf="@+id/right_margin"
            app:layout_constraintBottom_toTopOf="@+id/btn_first_row_area"
            app:layout_constraintStart_toEndOf="@+id/t9_key_2"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/t9_key_4"
            style="@style/keyboard_number_button"
            android:text="@string/number_four"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintBottom_toTopOf="@+id/btn_second_row_area"
            app:layout_constraintTop_toBottomOf="@+id/t9_key_1"/>

    <TextView
            android:id="@+id/t9_key_5"
            style="@style/keyboard_number_button"
            android:text="@string/number_five"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintBottom_toTopOf="@+id/btn_second_row_area"
            app:layout_constraintTop_toTopOf="@+id/btn_first_row_area"/>

    <TextView
            android:id="@+id/t9_key_6"
            style="@style/keyboard_number_button"
            android:text="@string/number_six"
            app:layout_constraintBottom_toTopOf="@+id/btn_second_row_area"
            app:layout_constraintEnd_toEndOf="@+id/right_margin"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintTop_toTopOf="@+id/btn_first_row_area"/>

    <TextView
            android:id="@+id/t9_key_7"
            style="@style/keyboard_number_button"
            android:text="@string/number_seven"
            app:layout_constraintBottom_toTopOf="@+id/btn_third_row_area"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintTop_toBottomOf="@+id/t9_key_4"/>

    <TextView
            android:id="@+id/t9_key_8"
            style="@style/keyboard_number_button"
            android:text="@string/number_eight"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintBottom_toTopOf="@+id/btn_third_row_area"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintTop_toBottomOf="@+id/t9_key_5"/>

    <TextView
            android:id="@+id/t9_key_9"
            style="@style/keyboard_number_button"
            android:text="@string/number_nine"
            app:layout_constraintEnd_toEndOf="@+id/right_margin"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintBottom_toTopOf="@+id/btn_third_row_area"
            app:layout_constraintTop_toBottomOf="@+id/t9_key_6"/>

    <TextView
            android:id="@+id/t9_key_point"
            style="@style/keyboard_number_button"
            android:text="@string/btn_point"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBottom_toTopOf="@+id/btn_fourth_row_area"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintTop_toTopOf="@+id/btn_third_row_area"/>

    <TextView
            android:id="@+id/t9_key_0"
            style="@style/keyboard_number_button"
            android:text="@string/number_zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintBottom_toTopOf="@+id/btn_fourth_row_area"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_left"
            app:layout_constraintTop_toTopOf="@+id/btn_third_row_area"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/t9_key_backspace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_backspace_black"
            app:layout_constraintEnd_toStartOf="@+id/right_margin"
            app:layout_constraintStart_toEndOf="@+id/t9_key_0"
            app:layout_constraintBottom_toTopOf="@+id/btn_fourth_row_area"
            app:layout_constraintTop_toBottomOf="@+id/t9_key_9"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/t9_key_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_close_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/right_margin"
            app:layout_constraintStart_toStartOf="@+id/btn_center_area_right"
            app:layout_constraintTop_toBottomOf="@+id/t9_key_backspace"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_fourth_row_area"
            app:layout_constraintGuide_percent="0.8"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_third_row_area"
            app:layout_constraintGuide_percent="0.6"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_second_row_area"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal"/>


    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_first_row_area"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_center_area_left"
            app:layout_constraintGuide_percent="0.34"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_center_area_right"
            app:layout_constraintGuide_percent="0.67"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_margin"
            app:layout_constraintGuide_percent="0.995"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_margin"
            app:layout_constraintGuide_percent="0.005"
            android:orientation="vertical"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_first_row_area"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_second_row_area"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_third_row_area"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/t9_key_0"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/t9_key_2"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/t9_key_8"/>

    <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_center_area_right"/>


</androidx.constraintlayout.widget.ConstraintLayout>